# hot-or-not-auth

./: .dockerignore  .gitignore  AppConfig.toml  AuthConfig.toml  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: deploy-to-production-on-merge-to-main.yaml
.helix/: languages.toml
cloudflare-api/: Cargo.toml
cloudflare-api/src/: errors.rs  lib.rs
cloudflare-api/src/connect/: auth.rs  client.rs  mod.rs  spec.rs
cloudflare-api/src/endpoints/: mod.rs
cloudflare-api/src/endpoints/storage_kv/: delete_kv.rs  mod.rs  read_kv.rs  read_metadata.rs  write_kv_with_metadata.rs
design/: GoBazzinga.postman_collection.json  anonymous-identity-with-canister-signature.md  anonymous-identity.md  auth-flow.drawio  auth-flow.md  oauth2-login.md
examples/verify-auth-leptos/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
examples/verify-auth-leptos/src/: app.rs  canister_temp.rs  main.rs
examples/verify-auth-solidjs/: README.md  declarations  index.html  package.json  pnpm-lock.yaml  vite.config.js
examples/verify-principal/: .gitignore  Cargo.toml  README.md  build_n_install.sh  deploy.sh  dfx.json  package.json  pnpm-lock.yaml  stop.sh  webpack.config.js
examples/verify-principal/src/verify_principal_backend/: Cargo.toml  verify_principal_backend.did
examples/verify-principal/src/verify_principal_backend/src/: lib.rs
examples/verify-principal/src/verify_principal_frontend/src/: index.html  index.js
src/: app.rs  constants.rs  fileserve.rs  init.rs  lib.rs  main.rs
src/auth/: agent_js.rs  cookie.rs  generate.rs  identity.rs  mod.rs
src/metadata/: user.rs
src/page/: anonymous.rs  auth_init.rs  login.rs  mod.rs  oauth2_response.rs  test.rs  verify_creds.rs
src/providers/: google.rs  internetcomputer.rs  mod.rs
src/store/: cloudflare.rs  mock.rs  mod.rs
verify_auth/: package-lock.json  package.json  pnpm-lock.yaml
verify_auth/src/: App.jsx
verify_principal/: build_n_install.sh  package.json
verify_principal/src/verify_principal_backend/: Cargo.toml
verify_principal/src/verify_principal_frontend/src/: .ic-assets.json5
