[package]
name = "hot-or-not-auth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.6", optional = true, features = ["http2"] }
axum-extra = { version = "0.9", features = ["cookie", "cookie-signed", "typed-header"] }
bip32 = { version = "0.5", optional = true }
cfg-if = "1.0"
chrono = { version = "0.4", optional = true }
cloudflare-api = { path = "./cloudflare-api", optional = true }
console_error_panic_hook = "0.1"
console_log = "1"
figment = { version = "0.10", optional = true, features = ["env", "toml"] }
http = "0.2.8"
ic-agent = { version = "0.31", optional = true }
k256 = { version = "0.13", optional = true }
leptos = { version = "0.5", features = ["csr", "ssr", "nightly"] }
leptos_axum = { version = "0.5", optional = true }
leptos_meta = { version = "0.5", features = ["nightly"] }
leptos_router = { version = "0.5", features = ["nightly"] }
log = "0.4"
rand = { version = "0.8", optional = true }
sec1 = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tiny-bip39 = { version = "1.0", optional = true }
tokio = { version = "1.35", optional = true, features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.4", optional = true, features = ["cors", "fs"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
wasm-bindgen = "0.2"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:axum",
    "dep:bip32",
    "dep:chrono",
    "dep:cloudflare-api",
    "dep:figment",
    "dep:ic-agent",
    "dep:k256",
    "dep:leptos_axum",
    "dep:rand",
    "dep:sec1",
    "dep:tiny-bip39",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.release]
lto = true
codegen-units = 1

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "hot-or-not-auth"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# The tailwind input file.
tailwind-input-file = "style/input.css"

# The tailwind config file.
tailwind-config-file = "tailwind.config.js"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
