[package]
name = "cloudflare-api"
version = "0.4.0"
edition = "2021"
description = "Cloudflare Rest API v4 wrapper"
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_with = { version = "3.5", features = ["base64"] }
tracing = "0.1"
url = "2.5"
